--- a/front-end/src/css/RadioComponent.css
+++ b/front-end/src/css/RadioComponent.css
@@ -4,6 +4,34 @@
      border: 2px solid rgb(10,10,10);
      margin: 10px;
 }
+.form-check-label.active{
+    background-color: rgb(219,9,9,0.93);
+    font-weight: 600;
+    user-select: none;
+    letter-spacing: 0.5px;
+    border-radius: 1px;
+    cursor: pointer;
+    -webkit-border-radius: 1px;
+    -moz-border-radius: 1px;
+    -ms-border-radius: 1px;
+    -o-border-radius: 1px;
+}
+.form-check-label.inactive{
+    user-select: none;
+    cursor: pointer;
+    letter-spacing: 0.5px;
+    opacity: 0.8;
+    text-align: center;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.inactive:hover{
+    background-color: rgb(219,9,9,0.937);
+    opacity: 0.95;
+}
 .text{
     font-size: 17px;
     text-align: center;
